--- a/app/email/templates/email/send_mail.html
+++ b/app/email/templates/email/send_mail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <h2 class="mb-4">Send Email</h2>
 
     <div id="responseMessage" class="mt-3 mb-3"></div>
